# slam_lecture_codes

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: computer-vision-lidar.yml  slam-zero-to-hero.yml
SLAM_zero_to_hero/: Dockerfile  README.md
SLAM_zero_to_hero/1_10/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/1_10/examples/: use_header_only.cpp  use_shared_lib.cpp  use_static_lib.cpp
SLAM_zero_to_hero/1_10/include/geometry/: geometry.hpp
SLAM_zero_to_hero/1_10/include/mathlib/: mathlib.hpp
SLAM_zero_to_hero/1_10/src/: mathlib.cpp
SLAM_zero_to_hero/1_11/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/1_11/examples/: profile_features.cpp
SLAM_zero_to_hero/1_12/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/1_12/examples/: memory_examples.cpp
SLAM_zero_to_hero/1_14/: README.md
SLAM_zero_to_hero/1_15/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/1_15/examples/: test_bindings.py
SLAM_zero_to_hero/1_15/src/: slam_bindings.cpp
SLAM_zero_to_hero/1_16/: README.md
SLAM_zero_to_hero/1_16/ros1/src/slam_tutorial/: CMakeLists.txt  package.xml
SLAM_zero_to_hero/1_16/ros1/src/slam_tutorial/scripts/: publisher.py  subscriber.py
SLAM_zero_to_hero/1_16/ros1/src/slam_tutorial/src/: publisher.cpp  subscriber.cpp
SLAM_zero_to_hero/1_16/ros2/src/slam_tutorial/: CMakeLists.txt  package.xml
SLAM_zero_to_hero/1_16/ros2/src/slam_tutorial/slam_tutorial/: __init__.py  publisher.py  subscriber.py
SLAM_zero_to_hero/1_16/ros2/src/slam_tutorial/src/: publisher.cpp  subscriber.cpp
SLAM_zero_to_hero/1_21/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/1_21/examples/: eigen_basics.cpp  perturbation.cpp  sophus_se3.cpp  sophus_so3.cpp
SLAM_zero_to_hero/1_9/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/1_9/examples/: for_loop.cpp  map.cpp  smart_pointers.cpp  template_class.cpp  template_function.cpp  unordered_map.cpp  vector.cpp  while_loop.cpp
SLAM_zero_to_hero/2_10/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_10/examples/: gem_pooling.py  netvlad_pytorch.py  onnx_inference.cpp
SLAM_zero_to_hero/2_12/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_12/examples/: epipolar_visualization.cpp  essential_fundamental_demo.cpp  pose_recovery.cpp  relpose_opengv.cpp  relpose_poselib.cpp
SLAM_zero_to_hero/2_14/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_14/examples/: bev_lane_detection.cpp  bev_projection.cpp  hf_model_selection.cpp  hf_model_selection_poselib.cpp  homography_demo.cpp  homography_poselib.cpp  image_stitching.cpp  image_stitching_poselib.cpp
SLAM_zero_to_hero/2_15/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_15/examples/: feature_tracking_demo.cpp  monocular_vo.cpp  run_vo_kitti.cpp
SLAM_zero_to_hero/2_15/include/: monocular_vo.hpp
SLAM_zero_to_hero/2_15/src/: monocular_vo.cpp
SLAM_zero_to_hero/2_17/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_17/examples/: triangulation_demo.cpp  triangulation_opengv.cpp
SLAM_zero_to_hero/2_19/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_19/data/: .gitkeep
SLAM_zero_to_hero/2_19/examples/: charuco_calibration.cpp  marker_detection.cpp  marker_pose_estimation.cpp  pnp_demo.cpp  pnp_opengv.cpp  pnp_poselib.cpp  pnp_ransac_demo.cpp
SLAM_zero_to_hero/2_19/src/: charuco_calibration.cpp  marker_detector.cpp  marker_generator.cpp  pose_estimator.cpp
SLAM_zero_to_hero/2_22/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_22/examples/: ransac_custom.cpp  ransac_fundamental.cpp  ransac_homography.cpp  ransac_magsac.cpp  ransac_ransaclib.cpp
SLAM_zero_to_hero/2_27/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_27/examples/: basic_io.cpp  filtering.cpp  normal_estimation.cpp  segmentation.cpp  visualization.cpp
SLAM_zero_to_hero/2_29/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_29/examples/: icp_basic.cpp  icp_point_to_plane.cpp  icp_visualization.cpp  lidar_odometry.cpp
SLAM_zero_to_hero/2_3/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_3/examples/: feature_detection.cpp  feature_matching.cpp  feature_profiling.cpp
SLAM_zero_to_hero/2_30/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_30/examples/: gicp_demo.cpp  kiss_icp_demo.cpp  method_comparison.cpp  ndt_demo.cpp  teaser_demo.cpp
SLAM_zero_to_hero/2_31/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_31/examples/: bonxai_demo.cpp  comparison.cpp  octomap_demo.cpp  octomap_navigation.cpp  octree_demo.cpp
SLAM_zero_to_hero/2_4/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_4/config/: config.yaml
SLAM_zero_to_hero/2_4/convert2onnx/: convert_superglue_to_onnx.py  convert_superpoint_to_onnx.py  superglue.py  superpoint.py
SLAM_zero_to_hero/2_4/examples/: inference_image.cpp  inference_sequence.cpp
SLAM_zero_to_hero/2_4/include/: read_config.h  super_glue.h  super_point.h  utils.h
SLAM_zero_to_hero/2_4/src/: super_glue.cpp  super_point.cpp
SLAM_zero_to_hero/2_4/weights/: .gitkeep
SLAM_zero_to_hero/2_7/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_7/examples/: dense_optical_flow.cpp  sparse_optical_flow.cpp
SLAM_zero_to_hero/2_9/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/2_9/examples/: loop_closure_detection.cpp  vocabulary_training.cpp
SLAM_zero_to_hero/3_13/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/3_13/examples/: g2o_basics.cpp  g2o_bundle_adjustment.cpp
SLAM_zero_to_hero/3_14/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/3_14/examples/: gtsam_basics.cpp  gtsam_bundle_adjustment.cpp
SLAM_zero_to_hero/3_15/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/3_15/examples/: ceres_basics.cpp  ceres_bundle_adjustment.cpp
SLAM_zero_to_hero/3_16/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/3_16/examples/: symforce_basics.py
SLAM_zero_to_hero/3_17/: CMakeLists.txt  Dockerfile  README.md
SLAM_zero_to_hero/3_17/examples/: rpgo_basics.cpp  rpgo_outlier_rejection.cpp
(+27 files in other folders)
